--- a/secret.yaml
+++ b/secret.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: basic-user-pass
   annotations:
-    build.knative.dev/docker-0: https://docker.io
+    build.knative.dev/docker-0: https://index.docker.io/v1/
 type: kubernetes.io/basic-auth
 stringData:
-  username: <username>
-  password: <password>
+  username: { docker hub username | base64 }
+  password: { docker hub passwork | base64 }
