--- a/secret.yaml
+++ b/secret.yaml
@@ -5,6 +5,6 @@ metadata:
   annotations:
     build.knative.dev/docker-0: https://index.docker.io/v1/
 type: kubernetes.io/basic-auth
-stringData:
-  username: { docker hub username | base64 }
-  password: { docker hub passwork | base64 }
+stringData: #NOT Base64 encoded
+  username: { Docker Hub username }
+  password: { Docker Hub password }
